--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,3 +25,4 @@ setw -g pane-base-index 1
 set-option -ag status-style fg=white,bg=black
 set-option -g status-left-length 20
 setw -g window-status-current-style fg=black,bg=white
+# source-file "~/.config/tmux/tmux-themepack/powerline/block/magenta.tmuxtheme"
