--- a/zsh/.config/zsh/config
+++ b/zsh/.config/zsh/config
@@ -57,7 +57,7 @@ bindkey -M menuselect 'k' vi-up-line-or-history
 bindkey -M menuselect 'l' vi-forward-char
 bindkey -M menuselect 'j' vi-down-line-or-history
 
-# Initialize completion
+# Theming section ?!?!
 autoload -U compinit 
 compinit -d
 _comp_options+=(globdots)
